analisador/parte2/sintatico.output
Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: ε
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | tipo lista_variaveis

    7 tipo: T_LOGICO
    8     | T_INTEIRO

    9 lista_variaveis: T_IDENTIF lista_variaveis
   10                | T_IDENTIF

   11 lista_comandos: ε
   12               | comando lista_comandos

   13 comando: leitura
   14        | escrita
   15        | repeticao
   16        | selecao
   17        | atribuicao

   18 leitura: T_LEIA T_IDENTIF

   19 escrita: T_ESCREVA expressao

   20 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   22 atribuicao: T_IDENTIF T_ATRIB expressao

   23 expressao: expressao T_VEZES expressao
   24          | expressao T_DIV expressao
   25          | expressao T_MAIS expressao
   26          | expressao T_MENOS expressao
   27          | expressao T_MAIOR expressao
   28          | expressao T_MENOR expressao
   29          | expressao T_IGUAL expressao
   30          | expressao T_E expressao
   31          | expressao T_OU expressao
   32          | termo

   33 termo: T_IDENTIF
   34      | T_NUMERO
   35      | T_V
   36      | T_F
   37      | T_NAO termo
   38      | T_ABRE expressao T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_INICIO (259) 1
    T_FIM (260) 1
    T_IDENTIF (261) 2 9 10 18 22 33
    T_LEIA (262) 18
    T_ESCREVA (263) 19
    T_ENQTO (264) 20
    T_FACA (265) 20
    T_FIMENQTO (266) 20
    T_SE (267) 21
    T_ENTAO (268) 21
    T_SENAO (269) 21
    T_FIMSE (270) 21
    T_ATRIB (271) 22
    T_VEZES (272) 23
    T_DIV (273) 24
    T_MAIS (274) 25
    T_MENOS (275) 26
    T_MAIOR (276) 27
    T_MENOR (277) 28
    T_IGUAL (278) 29
    T_E (279) 30
    T_OU (280) 31
    T_V (281) 35
    T_F (282) 36
    T_NUMERO (283) 34
    T_NAO (284) 37
    T_ABRE (285) 38
    T_FECHA (286) 38
    T_LOGICO (287) 7
    T_INTEIRO (288) 8


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 1
        on right: 0
    cabecalho (36)
        on left: 2
        on right: 1
    variaveis (37)
        on left: 3 4
        on right: 1
    declaracao_variaveis (38)
        on left: 5 6
        on right: 4 5
    tipo (39)
        on left: 7 8
        on right: 5 6
    lista_variaveis (40)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (41)
        on left: 11 12
        on right: 1 12 20 21
    comando (42)
        on left: 13 14 15 16 17
        on right: 12
    leitura (43)
        on left: 18
        on right: 13
    escrita (44)
        on left: 19
        on right: 14
    repeticao (45)
        on left: 20
        on right: 15
    selecao (46)
        on left: 21
        on right: 16
    atribuicao (47)
        on left: 22
        on right: 17
    expressao (48)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 19 20 21 22 23 24 25 26 27 28 29 30 31 38
    termo (49)
        on left: 33 34 35 36 37 38
        on right: 32 37


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho • variaveis T_INICIO lista_comandos T_FIM

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    7 tipo: T_LOGICO •

    $default  reduce using rule 7 (tipo)


State 7

    8 tipo: T_INTEIRO •

    $default  reduce using rule 8 (tipo)


State 8

    1 programa: cabecalho variaveis • T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 11


State 9

    4 variaveis: declaracao_variaveis •

    $default  reduce using rule 4 (variaveis)


State 10

    5 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    6                     | tipo • lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    1 programa: cabecalho variaveis T_INICIO • lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 19
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 12

    9 lista_variaveis: T_IDENTIF • lista_variaveis
   10                | T_IDENTIF •

    T_IDENTIF  shift, and go to state 12

    $default  reduce using rule 10 (lista_variaveis)

    lista_variaveis  go to state 26


State 13

    5 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    6                     | tipo lista_variaveis •

    T_LOGICO   shift, and go to state 6
    T_INTEIRO  shift, and go to state 7

    $default  reduce using rule 6 (declaracao_variaveis)

    declaracao_variaveis  go to state 27
    tipo                  go to state 10


State 14

   22 atribuicao: T_IDENTIF • T_ATRIB expressao

    T_ATRIB  shift, and go to state 28


State 15

   18 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 29


State 16

   19 escrita: T_ESCREVA • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 36
    termo      go to state 37


State 17

   20 repeticao: T_ENQTO • expressao T_FACA lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 38
    termo      go to state 37


State 18

   21 selecao: T_SE • expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 39
    termo      go to state 37


State 19

    1 programa: cabecalho variaveis T_INICIO lista_comandos • T_FIM

    T_FIM  shift, and go to state 40


State 20

   12 lista_comandos: comando • lista_comandos

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 41
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 21

   13 comando: leitura •

    $default  reduce using rule 13 (comando)


State 22

   14 comando: escrita •

    $default  reduce using rule 14 (comando)


State 23

   15 comando: repeticao •

    $default  reduce using rule 15 (comando)


State 24

   16 comando: selecao •

    $default  reduce using rule 16 (comando)


State 25

   17 comando: atribuicao •

    $default  reduce using rule 17 (comando)


State 26

    9 lista_variaveis: T_IDENTIF lista_variaveis •

    $default  reduce using rule 9 (lista_variaveis)


State 27

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 5 (declaracao_variaveis)


State 28

   22 atribuicao: T_IDENTIF T_ATRIB • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 42
    termo      go to state 37


State 29

   18 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 18 (leitura)


State 30

   33 termo: T_IDENTIF •

    $default  reduce using rule 33 (termo)


State 31

   35 termo: T_V •

    $default  reduce using rule 35 (termo)


State 32

   36 termo: T_F •

    $default  reduce using rule 36 (termo)


State 33

   34 termo: T_NUMERO •

    $default  reduce using rule 34 (termo)


State 34

   37 termo: T_NAO • termo

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    termo  go to state 43


State 35

   38 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 44
    termo      go to state 37


State 36

   19 escrita: T_ESCREVA expressao •
   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 19 (escrita)


State 37

   32 expressao: termo •

    $default  reduce using rule 32 (expressao)


State 38

   20 repeticao: T_ENQTO expressao • T_FACA lista_comandos T_FIMENQTO
   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_FACA   shift, and go to state 54
    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53


State 39

   21 selecao: T_SE expressao • T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE
   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_ENTAO  shift, and go to state 55
    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53


State 40

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM •

    $default  reduce using rule 1 (programa)


State 41

   12 lista_comandos: comando lista_comandos •

    $default  reduce using rule 12 (lista_comandos)


State 42

   22 atribuicao: T_IDENTIF T_ATRIB expressao •
   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53

    $default  reduce using rule 22 (atribuicao)


State 43

   37 termo: T_NAO termo •

    $default  reduce using rule 37 (termo)


State 44

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao
   38 termo: T_ABRE expressao • T_FECHA

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51
    T_E      shift, and go to state 52
    T_OU     shift, and go to state 53
    T_FECHA  shift, and go to state 56


State 45

   23 expressao: expressao T_VEZES • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 57
    termo      go to state 37


State 46

   24 expressao: expressao T_DIV • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 58
    termo      go to state 37


State 47

   25 expressao: expressao T_MAIS • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 59
    termo      go to state 37


State 48

   26 expressao: expressao T_MENOS • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 60
    termo      go to state 37


State 49

   27 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 61
    termo      go to state 37


State 50

   28 expressao: expressao T_MENOR • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 62
    termo      go to state 37


State 51

   29 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 63
    termo      go to state 37


State 52

   30 expressao: expressao T_E • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 64
    termo      go to state 37


State 53

   31 expressao: expressao T_OU • expressao

    T_IDENTIF  shift, and go to state 30
    T_V        shift, and go to state 31
    T_F        shift, and go to state 32
    T_NUMERO   shift, and go to state 33
    T_NAO      shift, and go to state 34
    T_ABRE     shift, and go to state 35

    expressao  go to state 65
    termo      go to state 37


State 54

   20 repeticao: T_ENQTO expressao T_FACA • lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 66
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 55

   21 selecao: T_SE expressao T_ENTAO • lista_comandos T_SENAO lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 67
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 56

   38 termo: T_ABRE expressao T_FECHA •

    $default  reduce using rule 38 (termo)


State 57

   23 expressao: expressao • T_VEZES expressao
   23          | expressao T_VEZES expressao •
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    $default  reduce using rule 23 (expressao)


State 58

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   24          | expressao T_DIV expressao •
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    $default  reduce using rule 24 (expressao)


State 59

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   25          | expressao T_MAIS expressao •
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46

    $default  reduce using rule 25 (expressao)


State 60

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   26          | expressao T_MENOS expressao •
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46

    $default  reduce using rule 26 (expressao)


State 61

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   27          | expressao T_MAIOR expressao •
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48

    $default  reduce using rule 27 (expressao)


State 62

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   28          | expressao T_MENOR expressao •
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48

    $default  reduce using rule 28 (expressao)


State 63

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   29          | expressao T_IGUAL expressao •
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50

    $default  reduce using rule 29 (expressao)


State 64

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   30          | expressao T_E expressao •
   31          | expressao • T_OU expressao

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51

    $default  reduce using rule 30 (expressao)


State 65

   23 expressao: expressao • T_VEZES expressao
   24          | expressao • T_DIV expressao
   25          | expressao • T_MAIS expressao
   26          | expressao • T_MENOS expressao
   27          | expressao • T_MAIOR expressao
   28          | expressao • T_MENOR expressao
   29          | expressao • T_IGUAL expressao
   30          | expressao • T_E expressao
   31          | expressao • T_OU expressao
   31          | expressao T_OU expressao •

    T_VEZES  shift, and go to state 45
    T_DIV    shift, and go to state 46
    T_MAIS   shift, and go to state 47
    T_MENOS  shift, and go to state 48
    T_MAIOR  shift, and go to state 49
    T_MENOR  shift, and go to state 50
    T_IGUAL  shift, and go to state 51

    $default  reduce using rule 31 (expressao)


State 66

   20 repeticao: T_ENQTO expressao T_FACA lista_comandos • T_FIMENQTO

    T_FIMENQTO  shift, and go to state 68


State 67

   21 selecao: T_SE expressao T_ENTAO lista_comandos • T_SENAO lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 69


State 68

   20 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO •

    $default  reduce using rule 20 (repeticao)


State 69

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO • lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 14
    T_LEIA     shift, and go to state 15
    T_ESCREVA  shift, and go to state 16
    T_ENQTO    shift, and go to state 17
    T_SE       shift, and go to state 18

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 70
    comando         go to state 20
    leitura         go to state 21
    escrita         go to state 22
    repeticao       go to state 23
    selecao         go to state 24
    atribuicao      go to state 25


State 70

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos • T_FIMSE

    T_FIMSE  shift, and go to state 71


State 71

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE •

    $default  reduce using rule 21 (selecao)
